libsrc = files(
  'lib/asn1/alg_id.cpp',
  'lib/asn1/asn1_alt_name.cpp',
  'lib/asn1/asn1_attribute.cpp',
  'lib/asn1/asn1_obj.cpp',
  'lib/asn1/asn1_oid.cpp',
  'lib/asn1/asn1_str.cpp',
  'lib/asn1/asn1_time.cpp',
  'lib/asn1/ber_dec.cpp',
  'lib/asn1/der_enc.cpp',
  'lib/asn1/oid_lookup/default.cpp',
  'lib/asn1/oid_lookup/oids.cpp',
  'lib/asn1/x509_dn.cpp',
  'lib/base/init.cpp',
  'lib/base/scan_name.cpp',
  'lib/base/symkey.cpp',
  'lib/base/transform.cpp',
  'lib/block/aes/aes.cpp',
#  'lib/block/aes_ni/aes_ni.cpp',
#  'lib/block/aes_ssse3/aes_ssse3.cpp',
  'lib/block/block_cipher.cpp',
  'lib/block/blowfish/blfs_tab.cpp',
  'lib/block/blowfish/blowfish.cpp',
  'lib/block/camellia/camellia.cpp',
  'lib/block/cascade/cascade.cpp',
  'lib/block/cast/cast128.cpp',
  'lib/block/cast/cast256.cpp',
  'lib/block/des/des.cpp',
  'lib/block/des/des_tab.cpp',
  'lib/block/des/desx.cpp',
  'lib/block/gost_28147/gost_28147.cpp',
  'lib/block/idea/idea.cpp',
#  'lib/block/idea_sse2/idea_sse2.cpp',
  'lib/block/kasumi/kasumi.cpp',
  'lib/block/lion/lion.cpp',
  'lib/block/mars/mars.cpp',
  'lib/block/misty1/misty1.cpp',
  'lib/block/noekeon/noekeon.cpp',
  'lib/block/noekeon_simd/noekeon_simd.cpp',
  'lib/block/rc2/rc2.cpp',
  'lib/block/rc5/rc5.cpp',
  'lib/block/rc6/rc6.cpp',
  'lib/block/safer/safer_sk.cpp',
  'lib/block/seed/seed.cpp',
  'lib/block/serpent/serpent.cpp',
  'lib/block/serpent_simd/serp_simd.cpp',
  'lib/block/tea/tea.cpp',
#  'lib/block/threefish_avx2/threefish_avx2.cpp',
  'lib/block/threefish/threefish.cpp',
  'lib/block/twofish/twofish.cpp',
  'lib/block/twofish/two_tab.cpp',
  'lib/block/xtea_simd/xtea_simd.cpp',
  'lib/block/xtea/xtea.cpp',
  'lib/cert/cvc/asn1_eac_str.cpp',
  'lib/cert/cvc/asn1_eac_tm.cpp',
  'lib/cert/cvc/cvc_ado.cpp',
  'lib/cert/cvc/cvc_cert.cpp',
  'lib/cert/cvc/cvc_req.cpp',
  'lib/cert/cvc/cvc_self.cpp',
  'lib/cert/cvc/ecdsa_sig.cpp',
  'lib/cert/cvc/signed_obj.cpp',
  'lib/cert/x509/certstor.cpp',
  'lib/cert/x509/crl_ent.cpp',
  'lib/cert/x509/key_constraint.cpp',
  'lib/cert/x509/ocsp.cpp',
  'lib/cert/x509/ocsp_types.cpp',
  'lib/cert/x509/pkcs10.cpp',
  'lib/cert/x509/x509_ca.cpp',
  'lib/cert/x509/x509cert.cpp',
  'lib/cert/x509/x509_crl.cpp',
  'lib/cert/x509/x509_ext.cpp',
  'lib/cert/x509/x509_obj.cpp',
  'lib/cert/x509/x509opt.cpp',
  'lib/cert/x509/x509path.cpp',
  'lib/cert/x509/x509self.cpp',
  'lib/codec/base64/base64.cpp',
  'lib/codec/hex/hex.cpp',
  'lib/compression/bzip2/bzip2.cpp',
  'lib/compression/compression.cpp',
#  'lib/compression/lzma/lzma.cpp',
#  'lib/compression/zlib/zlib.cpp',
#  'lib/entropy/beos_stats/es_beos.cpp',
#  'lib/entropy/cryptoapi_rng/es_capi.cpp',
#  'lib/entropy/darwin_secrandom/darwin_secrandom.cpp',
  'lib/entropy/dev_random/dev_random.cpp',
  'lib/entropy/egd/es_egd.cpp',
  'lib/entropy/entropy_srcs.cpp',
  'lib/entropy/hres_timer/hres_timer.cpp',
  'lib/entropy/proc_walk/proc_walk.cpp',
  'lib/entropy/rdrand/rdrand.cpp',
  'lib/entropy/rdseed/rdseed.cpp',
  'lib/entropy/unix_procs/unix_procs.cpp',
  'lib/entropy/unix_procs/unix_proc_sources.cpp',
#  'lib/entropy/win32_stats/es_win32.cpp',
  'lib/ffi/ffi.cpp',
  'lib/filters/algo_filt.cpp',
  'lib/filters/basefilt.cpp',
  'lib/filters/buf_filt.cpp',
  'lib/filters/codec_filt/b64_filt.cpp',
  'lib/filters/codec_filt/hex_filt.cpp',
  'lib/filters/comp_filter.cpp',
  'lib/filters/data_snk.cpp',
  'lib/filters/fd_unix/fd_unix.cpp',
  'lib/filters/filter.cpp',
  'lib/filters/key_filt.cpp',
  'lib/filters/out_buf.cpp',
  'lib/filters/pipe.cpp',
  'lib/filters/pipe_io.cpp',
  'lib/filters/pipe_rw.cpp',
  'lib/filters/secqueue.cpp',
  'lib/filters/threaded_fork.cpp',
  'lib/filters/transform_filter.cpp',
  'lib/hash/blake2/blake2b.cpp',
  'lib/hash/checksum/adler32/adler32.cpp',
  'lib/hash/checksum/crc24/crc24.cpp',
  'lib/hash/checksum/crc32/crc32.cpp',
  'lib/hash/comb4p/comb4p.cpp',
  'lib/hash/gost_3411/gost_3411.cpp',
  'lib/hash/has160/has160.cpp',
  'lib/hash/hash.cpp',
  'lib/hash/keccak/keccak.cpp',
  'lib/hash/md2/md2.cpp',
  'lib/hash/md4/md4.cpp',
  'lib/hash/md5/md5.cpp',
  'lib/hash/mdx_hash/mdx_hash.cpp',
  'lib/hash/par_hash/par_hash.cpp',
  'lib/hash/rmd128/rmd128.cpp',
  'lib/hash/rmd160/rmd160.cpp',
  'lib/hash/sha1/sha160.cpp',
#  'lib/hash/sha1_sse2/sha1_sse2.cpp',
  'lib/hash/sha2_32/sha2_32.cpp',
  'lib/hash/sha2_64/sha2_64.cpp',
  'lib/hash/skein/skein_512.cpp',
  'lib/hash/tiger/tiger.cpp',
  'lib/hash/tiger/tig_tab.cpp',
  'lib/hash/whirlpool/whirlpool.cpp',
  'lib/hash/whirlpool/whrl_tab.cpp',
  'lib/kdf/hkdf/hkdf.cpp',
  'lib/kdf/kdf1/kdf1.cpp',
  'lib/kdf/kdf2/kdf2.cpp',
  'lib/kdf/kdf.cpp',
  'lib/kdf/prf_tls/prf_tls.cpp',
  'lib/kdf/prf_x942/prf_x942.cpp',
  'lib/mac/cbc_mac/cbc_mac.cpp',
  'lib/mac/cmac/cmac.cpp',
  'lib/mac/hmac/hmac.cpp',
  'lib/mac/mac.cpp',
  'lib/mac/poly1305/poly1305.cpp',
  'lib/mac/siphash/siphash.cpp',
  'lib/mac/x919_mac/x919_mac.cpp',
  'lib/math/bigint/big_code.cpp',
  'lib/math/bigint/bigint.cpp',
  'lib/math/bigint/big_io.cpp',
  'lib/math/bigint/big_ops2.cpp',
  'lib/math/bigint/big_ops3.cpp',
  'lib/math/bigint/big_rand.cpp',
  'lib/math/bigint/divide.cpp',
  'lib/math/ec_gfp/curve_gfp.cpp',
  'lib/math/ec_gfp/curve_nistp.cpp',
  'lib/math/ec_gfp/point_gfp.cpp',
  'lib/math/mp/mp_asm.cpp',
  'lib/math/mp/mp_comba.cpp',
  'lib/math/mp/mp_karat.cpp',
  'lib/math/mp/mp_misc.cpp',
  'lib/math/mp/mp_monty.cpp',
  'lib/math/mp/mp_shift.cpp',
  'lib/math/numbertheory/dsa_gen.cpp',
  'lib/math/numbertheory/jacobi.cpp',
  'lib/math/numbertheory/make_prm.cpp',
  'lib/math/numbertheory/mp_numth.cpp',
  'lib/math/numbertheory/numthry.cpp',
  'lib/math/numbertheory/powm_fw.cpp',
  'lib/math/numbertheory/powm_mnt.cpp',
  'lib/math/numbertheory/pow_mod.cpp',
  'lib/math/numbertheory/primes.cpp',
  'lib/math/numbertheory/reducer.cpp',
  'lib/math/numbertheory/ressol.cpp',
  'lib/misc/aont/package.cpp',
  'lib/misc/cryptobox/cryptobox.cpp',
  'lib/misc/fpe_fe1/fpe_fe1.cpp',
  'lib/misc/openpgp/openpgp.cpp',
  'lib/misc/pbes2/pbes2.cpp',
  'lib/misc/pem/pem.cpp',
  'lib/misc/rfc3394/rfc3394.cpp',
  'lib/misc/srp6/srp6.cpp',
  'lib/misc/srp6/srp6_files.cpp',
  'lib/misc/tss/tss.cpp',
  'lib/modes/aead/aead.cpp',
  'lib/modes/aead/ccm/ccm.cpp',
  'lib/modes/aead/chacha20poly1305/chacha20poly1305.cpp',
  'lib/modes/aead/eax/eax.cpp',
#  'lib/modes/aead/gcm/clmul/clmul.cpp',
  'lib/modes/aead/gcm/gcm.cpp',
  'lib/modes/aead/ocb/ocb.cpp',
  'lib/modes/aead/siv/siv.cpp',
  'lib/modes/cbc/cbc.cpp',
  'lib/modes/cfb/cfb.cpp',
  'lib/modes/cipher_mode.cpp',
  'lib/modes/ecb/ecb.cpp',
  'lib/modes/mode_pad/mode_pad.cpp',
  'lib/modes/xts/xts.cpp',
  'lib/passhash/bcrypt/bcrypt.cpp',
  'lib/passhash/passhash9/passhash9.cpp',
  'lib/pbkdf/pbkdf1/pbkdf1.cpp',
  'lib/pbkdf/pbkdf2/pbkdf2.cpp',
  'lib/pbkdf/pbkdf.cpp',
  'lib/pk_pad/eme.cpp',
  'lib/pk_pad/eme_oaep/oaep.cpp',
  'lib/pk_pad/eme_pkcs1/eme_pkcs.cpp',
  'lib/pk_pad/eme_raw/eme_raw.cpp',
  'lib/pk_pad/emsa1_bsi/emsa1_bsi.cpp',
  'lib/pk_pad/emsa1/emsa1.cpp',
  'lib/pk_pad/emsa.cpp',
  'lib/pk_pad/emsa_pkcs1/emsa_pkcs1.cpp',
  'lib/pk_pad/emsa_pssr/pssr.cpp',
  'lib/pk_pad/emsa_raw/emsa_raw.cpp',
  'lib/pk_pad/emsa_x931/emsa_x931.cpp',
  'lib/pk_pad/hash_id/hash_id.cpp',
  'lib/pk_pad/mgf1/mgf1.cpp',
#  'lib/prov/openssl/openssl_block.cpp',
#  'lib/prov/openssl/openssl_ec.cpp',
#  'lib/prov/openssl/openssl_hash.cpp',
#  'lib/prov/openssl/openssl_rc4.cpp',
#  'lib/prov/openssl/openssl_rsa.cpp',
#  'lib/prov/tpm/tpm.cpp',
  'lib/pubkey/blinding.cpp',
  'lib/pubkey/curve25519/curve25519.cpp',
  'lib/pubkey/curve25519/donna.cpp',
  'lib/pubkey/dh/dh.cpp',
  'lib/pubkey/dl_algo/dl_algo.cpp',
  'lib/pubkey/dl_group/dl_group.cpp',
  'lib/pubkey/dl_group/named.cpp',
  'lib/pubkey/dlies/dlies.cpp',
  'lib/pubkey/dsa/dsa.cpp',
  'lib/pubkey/ecc_key/ecc_key.cpp',
  'lib/pubkey/ecdh/ecdh.cpp',
  'lib/pubkey/ecdsa/ecdsa.cpp',
  'lib/pubkey/ec_group/ec_group.cpp',
  'lib/pubkey/ec_group/named.cpp',
  'lib/pubkey/elgamal/elgamal.cpp',
  'lib/pubkey/gost_3410/gost_3410.cpp',
  'lib/pubkey/if_algo/if_algo.cpp',
  'lib/pubkey/keypair/keypair.cpp',
  'lib/pubkey/mce/code_based_key_gen.cpp',
  'lib/pubkey/mce/gf2m_rootfind_dcmp.cpp',
  'lib/pubkey/mce/gf2m_small_m.cpp',
  'lib/pubkey/mce/goppa_code.cpp',
  'lib/pubkey/mceies/mceies.cpp',
  'lib/pubkey/mce/mceliece.cpp',
  'lib/pubkey/mce/mceliece_key.cpp',
  'lib/pubkey/mce/polyn_gf2m.cpp',
  'lib/pubkey/mce/workfactor.cpp',
  'lib/pubkey/nr/nr.cpp',
  'lib/pubkey/pk_algs.cpp',
  'lib/pubkey/pkcs8.cpp',
  'lib/pubkey/pk_keys.cpp',
  'lib/pubkey/pk_ops.cpp',
  'lib/pubkey/pubkey.cpp',
  'lib/pubkey/rfc6979/rfc6979.cpp',
  'lib/pubkey/rsa/rsa.cpp',
  'lib/pubkey/rw/rw.cpp',
  'lib/pubkey/workfactor.cpp',
  'lib/pubkey/x509_key.cpp',
  'lib/rng/hmac_drbg/hmac_drbg.cpp',
  'lib/rng/hmac_rng/hmac_rng.cpp',
  'lib/rng/rng.cpp',
  'lib/rng/system_rng/system_rng.cpp',
  'lib/rng/x931_rng/x931_rng.cpp',
  'lib/stream/chacha/chacha.cpp',
  'lib/stream/ctr/ctr.cpp',
  'lib/stream/ofb/ofb.cpp',
  'lib/stream/rc4/rc4.cpp',
  'lib/stream/salsa20/salsa20.cpp',
  'lib/stream/stream_cipher.cpp',
  'lib/tls/credentials_manager.cpp',
  'lib/tls/msg_certificate.cpp',
  'lib/tls/msg_cert_req.cpp',
  'lib/tls/msg_cert_verify.cpp',
  'lib/tls/msg_client_hello.cpp',
  'lib/tls/msg_client_kex.cpp',
  'lib/tls/msg_finished.cpp',
  'lib/tls/msg_hello_verify.cpp',
  'lib/tls/msg_server_hello.cpp',
  'lib/tls/msg_server_kex.cpp',
  'lib/tls/msg_session_ticket.cpp',
#  'lib/tls/sessions_sqlite3/tls_session_manager_sqlite.cpp',
#  'lib/tls/sessions_sql/tls_session_manager_sql.cpp',
  'lib/tls/tls_alert.cpp',
  'lib/tls/tls_blocking.cpp',
  'lib/tls/tls_channel.cpp',
  'lib/tls/tls_ciphersuite.cpp',
  'lib/tls/tls_client.cpp',
  'lib/tls/tls_extensions.cpp',
  'lib/tls/tls_handshake_hash.cpp',
  'lib/tls/tls_handshake_io.cpp',
  'lib/tls/tls_handshake_state.cpp',
  'lib/tls/tls_heartbeats.cpp',
  'lib/tls/tls_policy.cpp',
  'lib/tls/tls_record.cpp',
  'lib/tls/tls_server.cpp',
  'lib/tls/tls_session.cpp',
  'lib/tls/tls_session_key.cpp',
  'lib/tls/tls_session_manager_memory.cpp',
  'lib/tls/tls_suite_info.cpp',
  'lib/tls/tls_version.cpp',
  'lib/utils/assert.cpp',
  'lib/utils/calendar.cpp',
  'lib/utils/charset.cpp',
  'lib/utils/cpuid.cpp',
  'lib/utils/data_src.cpp',
  'lib/utils/datastor/datastor.cpp',
  'lib/utils/dyn_load/dyn_load.cpp',
  'lib/utils/filesystem.cpp',
  'lib/utils/http_util/http_util.cpp',
  'lib/utils/locking_allocator/locking_allocator.cpp',
  'lib/utils/os_utils.cpp',
  'lib/utils/parsing.cpp',
  'lib/utils/read_cfg.cpp',
  'lib/utils/semaphore.cpp',
#  'lib/utils/sqlite3/sqlite3.cpp',
  'lib/utils/version.cpp',
  'lib/utils/zero_mem.cpp',
)

clisrc = files(
  'cli/asn1.cpp',
  'cli/cc_enc.cpp',
  'cli/compress.cpp',
  'cli/main.cpp',
  'cli/math.cpp',
  'cli/pubkey.cpp',
  'cli/speed.cpp',
  'cli/tls_client.cpp',
  'cli/tls_proxy.cpp',
  'cli/tls_server.cpp',
  'cli/utils.cpp',
  'cli/x509.cpp',
)

testsrc = files(
  'tests/main.cpp',
  'tests/test_aead.cpp',
  'tests/test_bigint.cpp',
  'tests/test_block.cpp',
  'tests/test_c25519.cpp',
  'tests/test_compression.cpp',
  'tests/test_cryptobox.cpp',
  'tests/test_cvc.cpp',
  'tests/test_dh.cpp',
  'tests/test_dlies.cpp',
  'tests/test_dsa.cpp',
  'tests/test_ecc_pointmul.cpp',
  'tests/test_ecdh.cpp',
  'tests/test_ecdsa.cpp',
  'tests/test_elg.cpp',
  'tests/test_entropy.cpp',
  'tests/test_ffi.cpp',
  'tests/test_fuzzer.cpp',
  'tests/test_gf2m.cpp',
  'tests/test_gost_3410.cpp',
  'tests/test_hash.cpp',
  'tests/test_kdf.cpp',
  'tests/test_keywrap.cpp',
  'tests/test_mac.cpp',
  'tests/test_mceliece.cpp',
  'tests/test_modes.cpp',
  'tests/test_nr.cpp',
  'tests/test_ocb.cpp',
  'tests/test_passhash.cpp',
  'tests/test_pbkdf.cpp',
  'tests/test_pubkey.cpp',
  'tests/test_rfc6979.cpp',
  'tests/test_rng.cpp',
  'tests/test_rsa.cpp',
  'tests/test_rw.cpp',
  'tests/tests.cpp',
  'tests/test_srp6.cpp',
  'tests/test_stream.cpp',
  'tests/test_tss.cpp',
  'tests/test_utils.cpp',
  'tests/test_x509_path.cpp',
  'tests/unit_ecc.cpp',
  'tests/unit_ecdh.cpp',
  'tests/unit_ecdsa.cpp',
  'tests/unit_tls.cpp',
  'tests/unit_x509.cpp',
)
